[gd_scene load_steps=75 format=3 uid="uid://b566iokk5nmmk"]

[ext_resource type="Texture2D" uid="uid://8yjyhusijptw" path="res://Objects/PlayerObject/PlayerAssets/Final_sprites (1).png" id="1_bgn2l"]
[ext_resource type="Script" uid="uid://cvx054nmy8n32" path="res://Assets/Actors/scripts/player.gd" id="2_8erg0"]
[ext_resource type="Script" uid="uid://cxyw0n68b66bn" path="res://Assets/Actors/ActorTools/Scripts/grid_movement.gd" id="3_8erg0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmj61"]
size = Vector2(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa5tp"]
atlas = ExtResource("1_bgn2l")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dbpf"]
atlas = ExtResource("1_bgn2l")
region = Rect2(416, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe2ng"]
atlas = ExtResource("1_bgn2l")
region = Rect2(384, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyduu"]
atlas = ExtResource("1_bgn2l")
region = Rect2(480, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k51u"]
atlas = ExtResource("1_bgn2l")
region = Rect2(448, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gjui"]
atlas = ExtResource("1_bgn2l")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m3lc"]
atlas = ExtResource("1_bgn2l")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbm4c"]
atlas = ExtResource("1_bgn2l")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee5an"]
atlas = ExtResource("1_bgn2l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8map"]
atlas = ExtResource("1_bgn2l")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul6th"]
atlas = ExtResource("1_bgn2l")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_665ly"]
atlas = ExtResource("1_bgn2l")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1hif"]
atlas = ExtResource("1_bgn2l")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxer6"]
atlas = ExtResource("1_bgn2l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1lcc"]
atlas = ExtResource("1_bgn2l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu1tm"]
atlas = ExtResource("1_bgn2l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e50d0"]
atlas = ExtResource("1_bgn2l")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m065"]
atlas = ExtResource("1_bgn2l")
region = Rect2(352, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htrny"]
atlas = ExtResource("1_bgn2l")
region = Rect2(320, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sexm0"]
atlas = ExtResource("1_bgn2l")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h55kv"]
atlas = ExtResource("1_bgn2l")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie2ri"]
atlas = ExtResource("1_bgn2l")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmptp"]
atlas = ExtResource("1_bgn2l")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ukc1"]
atlas = ExtResource("1_bgn2l")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg0ch"]
atlas = ExtResource("1_bgn2l")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_joi6l"]
atlas = ExtResource("1_bgn2l")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n540y"]
atlas = ExtResource("1_bgn2l")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqyy1"]
atlas = ExtResource("1_bgn2l")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45fc6"]
atlas = ExtResource("1_bgn2l")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4tub"]
atlas = ExtResource("1_bgn2l")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6ouy"]
atlas = ExtResource("1_bgn2l")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smnnk"]
atlas = ExtResource("1_bgn2l")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pggsy"]
atlas = ExtResource("1_bgn2l")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr2de"]
atlas = ExtResource("1_bgn2l")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ql42b"]
atlas = ExtResource("1_bgn2l")
region = Rect2(320, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eosfl"]
atlas = ExtResource("1_bgn2l")
region = Rect2(352, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88jcy"]
atlas = ExtResource("1_bgn2l")
region = Rect2(384, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecbyg"]
atlas = ExtResource("1_bgn2l")
region = Rect2(416, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bl3u"]
atlas = ExtResource("1_bgn2l")
region = Rect2(448, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fll37"]
atlas = ExtResource("1_bgn2l")
region = Rect2(480, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysevu"]
atlas = ExtResource("1_bgn2l")
region = Rect2(512, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7do8n"]
atlas = ExtResource("1_bgn2l")
region = Rect2(544, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6n0n"]
atlas = ExtResource("1_bgn2l")
region = Rect2(576, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3hpk"]
atlas = ExtResource("1_bgn2l")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gfyq"]
atlas = ExtResource("1_bgn2l")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r7c8"]
atlas = ExtResource("1_bgn2l")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl2cr"]
atlas = ExtResource("1_bgn2l")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ughq"]
atlas = ExtResource("1_bgn2l")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cglw6"]
atlas = ExtResource("1_bgn2l")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c16mu"]
atlas = ExtResource("1_bgn2l")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bxrp"]
atlas = ExtResource("1_bgn2l")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_744rk"]
atlas = ExtResource("1_bgn2l")
region = Rect2(256, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v75y5"]
atlas = ExtResource("1_bgn2l")
region = Rect2(288, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y0po"]
atlas = ExtResource("1_bgn2l")
region = Rect2(352, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rwij"]
atlas = ExtResource("1_bgn2l")
region = Rect2(480, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cs6i"]
atlas = ExtResource("1_bgn2l")
region = Rect2(448, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fauwr"]
atlas = ExtResource("1_bgn2l")
region = Rect2(416, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1plx8"]
atlas = ExtResource("1_bgn2l")
region = Rect2(384, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7151"]
atlas = ExtResource("1_bgn2l")
region = Rect2(512, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kojh3"]
atlas = ExtResource("1_bgn2l")
region = Rect2(320, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j546p"]
atlas = ExtResource("1_bgn2l")
region = Rect2(544, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_spb02"]
atlas = ExtResource("1_bgn2l")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6r1p"]
atlas = ExtResource("1_bgn2l")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc3sv"]
atlas = ExtResource("1_bgn2l")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg4tj"]
atlas = ExtResource("1_bgn2l")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqjmf"]
atlas = ExtResource("1_bgn2l")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pp36"]
atlas = ExtResource("1_bgn2l")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr7lb"]
atlas = ExtResource("1_bgn2l")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtu5n"]
atlas = ExtResource("1_bgn2l")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i6xbs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa5tp")
}],
"loop": true,
"name": &"down_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dbpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe2ng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyduu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k51u")
}],
"loop": true,
"name": &"down_run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gjui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa5tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m3lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbm4c")
}],
"loop": false,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle_0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee5an")
}],
"loop": true,
"name": &"left_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8map")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul6th")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_665ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1hif")
}],
"loop": true,
"name": &"left_run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxer6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee5an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1lcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu1tm")
}],
"loop": false,
"name": &"left_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e50d0")
}],
"loop": true,
"name": &"right_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m065")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htrny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sexm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h55kv")
}],
"loop": true,
"name": &"right_run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie2ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e50d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmptp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ukc1")
}],
"loop": false,
"name": &"right_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg0ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joi6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n540y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqyy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45fc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4tub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6ouy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smnnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pggsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr2de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql42b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eosfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88jcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecbyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bl3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fll37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysevu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7do8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6n0n")
}],
"loop": true,
"name": &"stop_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3hpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gfyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r7c8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl2cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ughq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cglw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c16mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bxrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_744rk")
}],
"loop": false,
"name": &"turn_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v75y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y0po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rwij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cs6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fauwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1plx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7151")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kojh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j546p")
}],
"loop": false,
"name": &"turn_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_spb02")
}],
"loop": true,
"name": &"up_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc3sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg4tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqjmf")
}],
"loop": true,
"name": &"up_run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pp36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spb02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr7lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtu5n")
}],
"loop": false,
"name": &"up_walk",
"speed": 5.0
}]

[node name="Player" type="Area2D"]
script = ExtResource("2_8erg0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vmj61")

[node name="PlayerSprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i6xbs")
animation = &"up_walk"

[node name="GridMovement" type="Node2D" parent="." node_paths=PackedStringArray("self_node")]
script = ExtResource("3_8erg0")
self_node = NodePath("..")

[node name="RayCast2D" type="RayCast2D" parent="GridMovement"]
collide_with_areas = true
collide_with_bodies = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="FacingDirection" type="RayCast2D" parent="."]
collide_with_areas = true
collide_with_bodies = false
